@@ -2,7 +2,7 @@ include $(top_srcdir)/common.mk
 
 moduledir = $(guilemoduledir)/overrides
 
-module_DATA = ui.defs ui.defs-type-ignores
+module_DATA = libgnomeui.defs libgnomeui.defs-type-ignores
 
 EXTRA_DIST = $(module_DATA)
 
