@@ -1,3 +1,11 @@
+2007-05-24  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/overrides/Makefile.am: Rename ui.defs to libgnomeui.defs.
+
+	* gnome/gw/libgnomeui-spec.scm (initialize): Update for
+	ui->libgnomeui.defs. Don't add an alias for time_t, GLib does
+	that.
+
 2007-05-10  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.91 ==
